# Solution_IndoorPositioning_H5

./: .gitignore  README.md  main.py  package-lock.json  package.json  pyproject.toml  start.sh  改动说明.md
local-beacon-service/: README.md  package-lock.json  package.json  service.js  start_service.sh
miniprogram/: app.json  project.config.json
miniprogram/config/: ble_scan_config.js
miniprogram/pages/config/: config.js  config.wxml  config.wxss
miniprogram/utils/: appManager.js  beaconManager.js
server/: README.md  config.json  config_manager.py  main.py  miniprogram_config.json  models.py  positioning.py  requirements.txt  server_runtime_config.json  state.py  web_config.json
test/: LoRaWANTracker Payload.json  config.json  config2.json  example_mqtt_data.json  map1.json
web/: README.md  index.html  package-lock.json  package.json  vite.config.js
web/src/: App.vue  style.css
web/src/components/: MapView.vue  ServerSettings.vue
web/src/components/configuration/: BeaconManagerTab.vue  GeneralSettingsTab.vue  MapEditorTab.vue
web/src/router/: index.js
web/src/services/: configApiService.js  localPositioningService.js  localStorageService.js  webBluetoothService.js
web/src/utils/positioning/: kalmanFilter.js  positionCalculator.js  positionManager.js
web/src/views/: ConfigurationSuiteView.vue  LocalModeConfigView.vue  MasterConfigView.vue  TrackerModeConfigView.vue
