[project]
name = "beacon-posistion-r1000"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "paho-mqtt>=2.1.0",
    "pydantic>=2.11.3",
    "python-multipart>=0.0.20",
    "scipy>=1.15.2",
    "uvicorn[standard]>=0.34.2",
    "websockets>=15.0.1",
]
